--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -48,5 +48,44 @@
       }
     }
   },
+  "creations": {
+    "title": "Créations",
+    "games": {
+      "title": "Jeux",
+      "summary": "Je développe des jeux vidéo depuis 2016. Je crée surtout des jeux courts pour le web. Certains ont été réalisés lors de jams de 48 heures. Vous pouvez trouver la liste complète sur <a href='{link}'>itch.io</a>"
+    },
+    "experiments": {
+      "title": "Expériences",
+      "summary": "Quelques créations personelles réalisées pour essayer ou apprendre diverses technologies."
+    },
+    "videos": {
+      "title": "Vidéos",
+      "summary": "<p>En 2015, j'ai commencé à réaliser des vidéos sur Youtube. À ce stade elles étaient surtout expérimentales : je me suis essayé aux sketchs, aux essais, aux analyses de jeux… Avec un planning de une vidéo par semaine, mon objectif était d'apprendre à utiliser le medium et explorer ce que je pouvais réaliser. Il en a résulté des vidéos parfois mauvaises, parfois épouvantables, et quelques unes qui sont encore à peu près correctes.</p> <p>En 2017, j'ai pris la décision de me focaliser sur les vidéos d'analyse de game-design. Depuis j'ai créé des essais sur des jeux indépendants, des créations intriguantes, et des utilisations originales du medium ludique. Mon but est d'amener des réflexions sur comment l'on définit le jeu-vidéo, montrer des façons nouvelles et créatives d'utiliser le medium, et partager des opinions sur quelques jeux méconnus</p> <p>Ces vidéos peuvent être visionnées depuis la chaîne <a href='{link}' target='_blank'>Excursions Virtuelles</a>.</p>"
+    },
+    "moog-memories": {
+      "description": "%usique interactive en HTML5, réalisé en 48 heures pour la Music Game Jam"
+    },
+    "tabletop-dance": {
+      "description": "Puzzle shooter créé durant la GMTK Jam"
+    },
+    "safe-bots": {
+      "description": "Puzzle développé sur une semaine"
+    },
+    "deep-sea-school": {
+      "description": "Jeu d'exploration et de narration"
+    },
+    "landscape-sounds": {
+      "description": "Musique générative créée procéduralement par la Web Audio API"
+    },
+    "harmonit": {
+      "description": "Outil de calcul d'accords, fait avec React Redux"
+    },
+    "once-upon-nothing": {
+      "description": "Générateur de phrases aléatoires, en Angular 2"
+    },
+    "terrible-logos": {
+      "description": "Texte bizarrement sylilisé, utilisant la méthode BEM"
+    }
+  },
   "today": "aujourd'hui"
 }
