--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -9,8 +9,8 @@
   },
   "about": {
     "title": "Présentation",
-    "dev": "Développeur front-end spécialisé dans les frameworks javascript tels qu'AngularJS, React et Vue. Je m'intéresse ) l'intégration, l'ergonomie et l'accessibilité, ainsi qu'à la communication. Mon objectif est de créer le pont entre les designers et les développeurs, en ayant conscience des défis et contraintes de chaque côté. Le développement d'interfaces est un domaine passionant pour ses technologies et méthodes en constante évolution. Mais c'est surtout une activité forçant à l'empathie envers les utilisateurs, et permettant de travailler au sein de rpofils variés, allant de développeurs back-end jusqu'aux artistes. Cette richesse et l'aspect humain sont ce que j'apprécie en priorité.",
-    "games": "Je développe aussi des jeux sur mon temps libre. Ils sont pour la plupart expérimentaux, narratifs ou contemplatifs, avec parfois une focalisation sur la musique générative. C'est une manière efficace d'expérimenter avec des technologies, notamment la Web Audio API. Ces jeux m'encouragent aussi à créer des projets non-uitilitaires, n'utilisant les technologies que pour le divertissement ou l'art, et ainsi les rendre plus humaines. Le jeu-vidéo est le medium idéal pour combiner mes compétences de développeurs avec d'autres passions, comme l'écriture ou la composition.",
+    "dev": "Développeur front-end spécialisé dans les frameworks javascript tels qu'AngularJS, React et Vue, je m'intéresse à l'intégration, l'ergonomie et l'accessibilité, ainsi qu'à la communication. Mon objectif est de créer le pont entre les designers et les développeurs, en ayant conscience des défis et contraintes de chaque côté. Le développement d'interfaces est un domaine passionant pour ses technologies et méthodes en constante évolution. Mais c'est surtout une profession forçant à l'empathie envers les utilisateurs, et permettant de travailler au sein de profils variés, allant de développeurs back-end jusqu'aux artistes. Cette richesse et ses aspects humains sont ce que j'apprécie en priorité.",
+    "games": "Je développe aussi des jeux sur mon temps libre. Ils sont pour la plupart expérimentaux, narratifs ou contemplatifs, avec parfois une focalisation sur la musique générative. C'est une manière efficace d'expérimenter avec des technologies, notamment la Web Audio API. Ces jeux m'encouragent aussi à créer des projets non-uitilitaires, n'employant les technologies que pour le divertissement ou l'art, et ainsi les rendre plus humaines. Le jeu-vidéo est le medium idéal pour combiner mes compétences de développeurs avec d'autres passions, comme l'écriture ou la composition.",
     "perso": "En dehors de ces activités, j'aime le théâtre (en tant que comédien amateur), le montage vidéo, le piano, les marches et les jeux de société."
   },
   "skills": {
@@ -52,7 +52,7 @@
     "title": "Créations",
     "games": {
       "title": "Jeux",
-      "summary": "Je développe des jeux vidéo depuis 2016. Je crée surtout des jeux courts pour le web. Certains ont été réalisés lors de jams de 48 heures. Vous pouvez trouver la liste complète sur <a href='{link}'>itch.io</a>"
+      "summary": "Je développe des jeux vidéo depuis 2016. Je crée surtout des jeux courts pour le web. Certains ont été réalisés lors de jams de 48 heures. Vous pouvez trouver la liste complète sur <a href='{link}'>itch.io</a>."
     },
     "experiments": {
       "title": "Expériences",
@@ -60,10 +60,10 @@
     },
     "videos": {
       "title": "Vidéos",
-      "summary": "<p>En 2015, j'ai commencé à réaliser des vidéos sur Youtube. À ce stade elles étaient surtout expérimentales : je me suis essayé aux sketchs, aux essais, aux analyses de jeux… Avec un planning de une vidéo par semaine, mon objectif était d'apprendre à utiliser le medium et explorer ce que je pouvais réaliser. Il en a résulté des vidéos parfois mauvaises, parfois épouvantables, et quelques unes qui sont encore à peu près correctes.</p> <p>En 2017, j'ai pris la décision de me focaliser sur les vidéos d'analyse de game-design. Depuis j'ai créé des essais sur des jeux indépendants, des créations intriguantes, et des utilisations originales du medium ludique. Mon but est d'amener des réflexions sur comment l'on définit le jeu-vidéo, montrer des façons nouvelles et créatives d'utiliser le medium, et partager des opinions sur quelques jeux méconnus</p> <p>Ces vidéos peuvent être visionnées depuis la chaîne <a href='{link}' target='_blank'>Excursions Virtuelles</a>.</p>"
+      "summary": "<p>En 2015, j'ai commencé à réaliser des vidéos sur Youtube. À ce stade elles étaient surtout expérimentales : je me suis essayé aux sketchs, aux essais, aux analyses de jeux… Avec un planning d'une vidéo par semaine, mon objectif était d'apprendre à utiliser le medium et explorer ce que je pouvais réaliser. Il en a résulté des vidéos parfois mauvaises, parfois épouvantables, et d'autres malgré tout encore sympathiques !</p> <p>En 2017, j'ai pris la décision de me focaliser sur les vidéos d'analyse de game-design. Depuis j'ai créé des essais sur des jeux indépendants, des créations intriguantes, et des utilisations originales du medium ludique. Mon but est d'amener des réflexions sur comment l'on définit le jeu-vidéo, montrer des façons nouvelles et créatives de l'utiliser, et partager des opinions sur quelques jeux méconnus.</p> <p>Ces vidéos peuvent être visionnées depuis la chaîne <a href='{link}' target='_blank'>Excursions Virtuelles</a>.</p>"
     },
     "moog-memories": {
-      "description": "%usique interactive en HTML5, réalisé en 48 heures pour la Music Game Jam"
+      "description": "Musique interactive en HTML5, réalisée en 48 heures pour la Music Game Jam"
     },
     "tabletop-dance": {
       "description": "Puzzle shooter créé durant la GMTK Jam"
