--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -68,6 +68,10 @@
       "title": "Vidéos",
       "summary": "<p>En 2015, j'ai commencé à réaliser des vidéos sur Youtube. À ce stade elles étaient surtout expérimentales : je me suis essayé aux sketchs, aux essais, aux analyses de jeux… Avec un planning d'une vidéo par semaine, mon objectif était d'apprendre à utiliser le medium et explorer ce que je pouvais réaliser. Il en a résulté des vidéos parfois mauvaises, parfois épouvantables, et d'autres malgré tout encore sympathiques !</p> <p>En 2017, j'ai pris la décision de me focaliser sur les vidéos d'analyse de game-design. Depuis j'ai créé des essais sur des jeux indépendants, des créations intriguantes, et des utilisations originales du medium ludique. Mon but est d'amener des réflexions sur comment l'on définit le jeu-vidéo, montrer des façons nouvelles et créatives de l'utiliser, et partager des opinions sur quelques jeux méconnus.</p> <p>Ces vidéos peuvent être visionnées depuis la chaîne <a href='{link}' target='_blank'>Excursions Virtuelles</a>.</p>"
     },
+    "tools": {
+      "title": "Outils",
+      "summary": "Librairies ou programmes utilitaires que j'ai pu développer."
+    },
     "moog-memories": {
       "description": "Musique interactive en HTML5, réalisée en 48 heures pour la Music Game Jam"
     },
@@ -91,6 +95,12 @@
     },
     "terrible-logos": {
       "description": "Texte bizarrement sylilisé, utilisant la méthode BEM"
+    },
+    "blood-not-allowed": {
+      "description": "Comédie horrifique musicale, entièrement textuel"
+    },
+    "orchestre-js": {
+      "description": "Une librairie audio web permettant de manipuler dynamiquement des couches instrumentales d'une musique."
     }
   },
   "today": "aujourd'hui"
